# color-picker

./: .gitignore  .gitmodules  Makefile  README.md  REUSE.toml  jsconfig.json  meson.build  meson.options  meson_options.txt
cli/: get-version.sh  update-po.sh
color-picker@tuberry/: extension.js  fields.js  metadata.json  prefs.js  stylesheet.css  test.pot  ui.js
color-picker@tuberry/locale/: color-picker.pot
color-picker@tuberry/locale/de_DE/LC_MESSAGES/: color-picker.po  gnome-shell-extension-color-picker.po
color-picker@tuberry/locale/es_ES/LC_MESSAGES/: gnome-shell-extension-color-picker.po
color-picker@tuberry/locale/it_IT/LC_MESSAGES/: color-picker.po
color-picker@tuberry/locale/nl/LC_MESSAGES/: gnome-shell-extension-color-picker.po
color-picker@tuberry/locale/pt_PT/LC_MESSAGES/: gnome-shell-extension-color-picker.po
color-picker@tuberry/locale/tr_TR/LC_MESSAGES/: color-picker.po
color-picker@tuberry/locale/zh_CN/LC_MESSAGES/: color-picker.mo  color-picker.po  gnome-shell-extension-color-picker.po
color-picker@tuberry/schemas/: gschemas.compiled  org.gnome.shell.extensions.color-picker.gschema.xml
po/: LINGUAS  POTFILES.in  de_DE.po  es_ES.po  fr_FR.po  it_IT.po  meson.build  nl.po  pt_BR.po  pt_PT.po  ru.po  tr_TR.po  uk_UA.po  zh_CN.po  zh_TW.po
res/: meson.build  metadata.json.in
res/data/: dbus.xml.in  extension.gresource.xml.in  meson.build  metadata.json.in
res/schema/: meson.build  schemas.gschema.xml  schemas.gschema.xml.in
res/schemas/: meson.build  org.gnome.shell.extensions.color-picker.gschema.xml
res/style/: meson.build  stylesheet-dark.scss  stylesheet-light.scss  stylesheet.scss
res/styles/: meson.build  stylesheet.scss
src/: color.js  const.js  extension.js  fubar.js  menu.js  prefs.js  ui.js  util.js
