option('target', type: 'combo', choices: ['zip', 'local', 'system'], value: 'local', description: 'build target')
option('version', type: 'integer', min: 0, max: 999, value: 0, description: 'default to get-version.sh')
option('desktop', type: 'boolean', value: false, description: 'save zip to user Desktop or not')
